# cargo-sonic

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
crates/cargo-sonic/: Cargo.toml
crates/cargo-sonic/src/: arch_aarch64.rs  arch_x86_64.rs  feature_mask.rs  lib.rs  loader_stack.rs  main.rs  select.rs
crates/cargo-sonic/tests/: integration_cli.rs
crates/sonic-build/: Cargo.toml
crates/sonic-build/src/: lib.rs
crates/sonic-loader/: Cargo.toml
crates/sonic-loader-probe/: Cargo.toml
crates/sonic-loader-probe/src/: main.rs
crates/sonic-loader/src/: arch_aarch64.rs  arch_x86_64.rs  feature_mask.rs  lib.rs  select.rs
crates/sonic-survey/: Cargo.toml
crates/sonic-survey/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
examples/blake3-benchmark/: Cargo.toml  README.md  justfile
examples/blake3-benchmark/src/: main.rs
examples/cpu-benchmark/: Cargo.toml  README.md  justfile
examples/ndarray-benchmark/: Cargo.toml  README.md  justfile
examples/ndarray-benchmark/src/: main.rs
examples/variant-printer/: Cargo.toml  README.md  justfile
examples/variant-printer/src/: main.rs
tests/cpu-fixtures/: README.md  aarch64-modern.tsv  x86_64-modern.tsv
tests/fixtures/env-printer/: Cargo.toml
tests/fixtures/env-printer/src/: main.rs
tests/fixtures/hello/: Cargo.toml
tests/fixtures/multi-bin/: Cargo.toml
tests/qemu/: matrix.aarch64.toml  matrix.x86_64.toml  system.toml
