[package]
name = "cargo-sonic"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Cargo subcommand for building Linux CPU-dispatched fat binaries"
readme = "../../README.md"
repository = "https://github.com/glebpom/cargo-sonic"
keywords = ["cargo", "target-cpu", "cpuid", "simd", "dispatch"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
publish = true

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive"] }
miniz_oxide = "0.9.1"
object = { version = "0.39.1", features = ["write"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
