[package]
name = "sonic-build"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.19"
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
sonic-loader = { path = "../sonic-loader" }
